--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,23 @@
 body {
     background-color: #918181;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.8em;
+}
+
+h1 {
+    font-size: 2.5em;
+    font-weight: 600;
+    color: burlywood;
+}
+
+h2 {
+    font-size: 1.5em;
+    font-weight: 400;
+    color: #822503;
+}
+
+h3 {
+    font-size: 1.2em;
+    font-weight: 400;
+    color: #000; 
 }
