--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,23 @@
 body {
     background-color: #918181;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.8em;
+    font-size: 0.8rem;
 }
 
 h1 {
-    font-size: 2.5em;
+    font-size: 2.5rem;
     font-weight: 600;
     color: burlywood;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: 400;
     color: #822503;
 }
 
 h3 {
-    font-size: 1.2em;
+    font-size: 1.2rem;
     font-weight: 400;
     color: #000; 
 }
