--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+header {
+    border: 4px solid #822503;
+    background-image: url("#");
+}
+
 body {
     background-color: #918181;
     font-family: Arial, Helvetica, sans-serif;
