adding img and mediaQ

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@ header {
 
 .img-pangolin {
     background-image: url("../images/img-pangolin.png");
+    max-width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 body {
@@ -12,8 +15,12 @@ body {
     font-size: 0.8rem;
 }
 
+main {
+    text-align: center;
+}
+
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 600;
     color: burlywood;
 }
@@ -28,4 +35,32 @@ h3 {
     font-size: 1.2rem;
     font-weight: 400;
     color: #000; 
+}
+
+.img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: #000;
+    border-radius: 50px;
+}
+
+.pangolin-img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    border-radius: 360px;
+}
+
+footer {
+    text-align: center;
+    color: beige;
+    font-size: 0.7rem;
+}
+
+@media (min-width: 425px) {
+
+.img-container {
+    grid-template-columns: repeat(4, 1fr);
+}
+
 }
