--- a/css/amazing-animals.css
+++ b/css/amazing-animals.css
@@ -1,15 +1,19 @@
 .img-villrein1 {
     width: 80%;
+    border: 2px solid #fff;
 }
 
 .img-gaupe1 {
     width: 100%;
+    border: 2px solid #fff;
 }
 
 .img-piggsvinet1 {
     width: 100%;
+    border: 2px solid #fff;
 }
 
 .img-ulv1 {
     width: 100%;
+    border: 2px solid #fff;
 }
