--- a/css/contact.css
+++ b/css/contact.css
@@ -21,3 +21,23 @@ input[type=email] {
     margin: 10px;
     padding: 5px 40px;
 }
+
+@media (min-width: 1100px) {
+
+input[type=text] {
+    width: 20%;
+}
+    
+input[type=email] {
+    width: 20%;
+}
+
+#message {
+    width: 20%;
+}
+
+label {
+    margin-bottom: 10px;
+}
+
+}
