--- a/css/about.css
+++ b/css/about.css
@@ -14,6 +14,31 @@
     background-color: aqua;
 }
 
+.ball {
+    transition-duration: 5s;
+    position: relative;
+    top: 300px;
+    height: 50px;
+    width: 50px;
+    background: red;
+    border-radius: 50%;
+}
+.ball:hover {
+    background: blue;
+}
+
+@keyframes bounce {
+    0% {
+        top: 300px;
+    }
+    50% {
+        top: 300px;
+    }
+    100% {
+        top: 300px;
+    }
+}
+
 @media (min-width: 1100px) {
 
 p {
