--- a/css/contact.css
+++ b/css/contact.css
@@ -16,7 +16,7 @@ input[type=email] {
     margin-top: 20px;
 }
 
-.submit-button {
+button {
     background-color: blueviolet;
     margin: 10px;
     padding: 5px 40px;
