--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,6 @@ body {
     font-size: 0.8rem;
 }
 
-main {
-    text-align: center;
-}
-
 h1 {
     font-size: 2rem;
     font-weight: 600;
@@ -68,6 +64,54 @@ h3 {
     font-weight: 400;
     color: #000; 
 }
+
+#slider {
+    overflow: hidden;
+}
+
+#slider figure {
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    animation: 20s slider infinite;
+}
+
+#slider figure img {
+    float: left;
+    width: 20%;
+}
+
+@keyframes slider {
+    0% {
+        left: 0;
+    }
+    20% {
+        left: 0;
+    }
+    25% {
+        left: -100%;
+    }
+    45% {
+        left: -100%;
+    }
+    50% {
+        left: -200%;
+    }
+    70% {
+        left: -200%;
+    }
+    75% {
+        left: -300%;
+    }
+    95% {
+        left: -300%;
+    }
+    100% {
+        left: -400%;
+    }
+}
+
 
 .img-container {
     display: grid;
