--- a/css/test.css
+++ b/css/test.css
@@ -17,7 +17,8 @@
 #slides {
     padding: 10px;
     border: 3px solid #ccc;
-    background: relative;
+    background: #fff;
+    position: relative;
     z-index: 1;
 }
 
@@ -46,13 +47,15 @@
     transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
     width: 400%;
     line-height: 0;
-    height: 200px;
+    height: 300px;
 }
 
 #slides .slide {
     width: 25%;
     float: left;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     color: #fff;
 }
@@ -78,7 +81,7 @@
 }
 
 #controls {
-    margin: -30px 0 0 0;
+    margin: -130px 0 0 0;
     width: 100%;
     height: 50px;
     z-index: 3;
@@ -103,7 +106,7 @@
 #slide1:checked ~ #controls label:nth-child(1) {
     background: no-repeat;
     float: right;
-    margin: 120px 100px 0 0;
+    margin: 0 -50px 0 0;
     display: block;
 }
 
@@ -113,7 +116,7 @@
 #slide1:checked ~ #controls label:nth-last-child(1) {
     background: no-repeat;
     float: left;
-    margin: 120px 0px 0 100px;
+    margin: 0 0 0 -900px;
     display: block;
 }
 
@@ -135,42 +138,19 @@
 #slide2:checked ~ #bullets label:nth-child(2),
 #slide3:checked ~ #bullets label:nth-child(3),
 #slide4:checked ~ #bullets label:nth-child(4) {
-    background: #333;
+    background: #444;
 }
 
-
-
-
-
-
-
-
-
-.img-villrein1 {
-    margin-top: 200px;
-    width: 80%;
-    border: 2px solid #fff;
-}
-
-.img-gaupe1 {
-    width: 100%;
-    border: 2px solid #fff;
-}
-
-.img-piggsvinet1 {
-    width: 100%;
-    border: 2px solid #fff;
-}
-
-.img-ulv1 {
-    width: 100%;
-    border: 2px solid #fff;
-}
-
-@media (min-width: 1100px) {
-
-.img-gaupe1, .img-piggsvinet1, .img-ulv1, .img-villrein1 {
-    width: 50%;
+@media screen and (max-width: 900px) {
+    #slide1:checked ~ #controls label:nth-child(2),
+    #slide1:checked ~ #controls label:nth-child(3),
+    #slide1:checked ~ #controls label:nth-child(4),
+    #slide1:checked ~ #controls label:nth-child(1),
+    #slide1:checked ~ #controls label:nth-last-child(2),
+    #slide1:checked ~ #controls label:nth-last-child(3),
+    #slide1:checked ~ #controls label:nth-last-child(4),
+    #slide1:checked ~ #controls label:nth-last-child(1)  {
+    margin: 0;
 }
 
 }
